# python-types-examples

./: LICENSE  README.md  pyproject.toml
src/examples/: pavel.py  session_1.py
